<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ChoseCity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/firstpagebackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/chose"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:gravity="center"
                android:theme="@style/SpnStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/update"
                android:textColor="#000000"
                android:textSize="20sp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/title1"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="#a30000"
                android:textSize="20sp"
                android:text="@string/updatetime1"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/title2"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="#a30000"
                android:textSize="20sp"
                android:text="@string/updatetime2"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp"
                android:text="@string/statement"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="#a30000"
                android:textSize="20sp"
                android:text="@string/statementmessage"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textColor="#e3ef00"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/search"
                android:background="@drawable/searchbutton"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:textColor="#e3ef00"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/lastsearch"
                android:background="@drawable/searchbutton"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>